2009-11-20
* Compatibility with latest Netzke code ("edge")

2009-09-29
* Compatibility with Ext 3.0.

2009-09-06
* Move from sqlite to mysql.
* Support for netzke-basepack v0.5.
* UserManager replaced with GridPanel.
* Minor visual improvements.

2009-05-12
Fix: crash after new user create

2009-05-07
Version shown in http://blog.writelesscode.com/past/2009/5/7/netzke_intuitive_application_configuration_with_help_of_masquerading/