@@ -1,0 +1,5 @@
+class TabPanelController < ApplicationController
+  def index
+  end
+
+end
